--- a/index.html
+++ b/index.html
@@ -46,15 +46,12 @@
             <h4>Hello</h4>
             <h1>I'm Aslı <br><span>Çolakoğlu</span></h1>
             <h3>Software Engineering Student</h3>
-            <a href="Aslı Çolakoğlu CV.pdf" class="btn" target="_blank">Download Resume</a>
+            <a href="Aslı Çolakoğlu CV.pdf" class="btn" target="_blank">Download Resume</a>
         </div>
     </section>
 
     <!-- About -->
     <section class="about" id="about">
-        <div class="about-img">
-            <img src="image.jpeg" alt="Profile Photo">
-        </div>
 
         <div class="about-text">
             <h2>About Me</h2>
