Correct text formatting and capitalization in index.html

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
             <h4>Hi, My name is Aslı Çolakoğlu.</h4>
 
             <p>I am a final-year Software Engineering student at OSTİM Technical University in Ankara. I have a strong passion for problem-solving, building practical software solutions, and exploring innovative ideas.</p>
-            <p>My key interests include Machine Learning, Front-end Development, and general software development. I enjoy creating modern, user-centered interfaces and writing clean, maintainable code.</p>
+            <p>My key interests include Machine Learning, Front-End Development, and general software development. I enjoy creating modern, user-centered interfaces and writing clean, maintainable code.</p>
 
             <div class="about-gri">
                 <div class="about-in"><h5>1. Problem Solving</h5></div>
                 <div class="about-in"><h5>2. Strong Communication Skills</h5></div>
                 <div class="about-in"><h5>3. Teamwork & Collaboration</h5></div>
-                <div class="about-in"><h5>4. Organized & Detail - Oriented</h5></div>
+                <div class="about-in"><h5>4. Organized & Detail-Oriented</h5></div>
                 <div class="about-in"><h5>5. Software Development</h5></div>
-                <div class="about-in"><h5>6. Front-end Web Development</h5></div>
+                <div class="about-in"><h5>6. Front-End Web Development</h5></div>
             </div>
 
             <a href="#contact" class="btn">Contact Me</a>
@@ -88,7 +88,7 @@
                 <h4><span>Intern | 28.07.2024 - 23.08.2024</span></h4>
                 <p>• Monitored network traffic using firewall and IDS/IPS systems.<br>
                 • Conducted penetration tests.<br>
-                • Improved security knowledge through research.</p>
+                • Improved my security knowledge through research.</p>
             </div>
         </div>
 
@@ -97,7 +97,7 @@
                 <img src="img/gfg.png">
                 <h3>BISTEK Yazılım</h3>
                 <h4><span>Intern | 06.01.2025 - 24.01.2025</span></h4>
-                <p>• Processed live video streams and applied the Canny algorithm.<br>
+                <p>• Processed live video streams and applied the Canny Algorithm.<br>
                 • Developed a classification model using MNIST.<br>
                 • Contributed to image processing workflows.</p>
             </div>
@@ -163,7 +163,7 @@
 
         <div class="box">
             <img src="img/cp-removebg-preview.png">
-            <h3>React.js</h3>
+            <h3>React</h3>
             
         </div>
 
@@ -339,8 +339,8 @@
             <div class="row">
                 
                 <h3>Social Media Manager</h3>
-                <p>• Manage social media accounts.<br>
-                • Create content for event videos and promotional campaigns.</p>
+                <p>• Managed social media accounts.<br>
+                • Created content for event videos and promotional campaigns.</p>
             </div>
         </div>
     </section>
